<resources>
    <string name="accurate_search">Accurate Scan</string>
    <string name="add">Add</string>
    <string name="add_nfs_success">Add NFS Success</string>
    <string name="address">Address : %1$s</string>
    <string name="anonymous">Anonymous</string>
    <string name="app_name">Media Center</string>
    <string name="auto_scan_smb">Auto scan SMB</string>
    <string name="back">Back</string>
    <string name="back_top">TOP</string>
    <string name="blu_ray_navigation">Blu-ray menu</string>
    <string name="br_add">Add a folder or a SMB shared</string>
    <string name="br_know">I Know</string>
    <string name="br_msg_0">Press the left key to show the list of devices</string>
    <string name="br_msg_1">Press the Menu key to pop up the menu list</string>
    <string name="br_msg_2">Click the Select to add a folder or SMB shared path to Homethreater</string>
    <string name="br_next">Next</string>
    <string name="br_open_menu">Open menu</string>
    <string name="br_show_device">Show Device List</string>
    <string name="br_skip">Skip</string>
    <string name="br_start">Start</string>
    <string name="br_title">Operation Tip</string>
    <string name="browse_path">Path: %1$s</string>
    <string name="c_date">date:%1$s</string>
    <string name="c_name">name:%1$s</string>
    <string name="c_size">size:%1$s</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_select_reminds">Press menu key to cancel</string>
    <string name="cannot_select_file">Cannot select this type of file!</string>
    <string name="check_usb">Detected the external device</string>
    <string name="check_usb_remove">Storage device has been removed</string>
    <string name="computing">computing</string>
    <string name="connect_nfs">Connect NFS</string>
    <string name="connect_smb">Access：%1$s</string>
    <string name="copy_file">Copy file</string>
    <string name="copy_filed">Copy failed</string>
    <string name="copy_ing">Copying %1$s items</string>
    <string name="copy_success">Copy Success</string>
    <string name="count">Total:</string>
    <string name="create">Create</string>
    <string name="create_hint">file name</string>
    <string name="create_new">New</string>
    <string name="create_success">Created Success</string>
    <string name="default_port">* Default Port: 111</string>
    <string name="delete">Delete</string>
    <string name="delete_file">Delete</string>
    <string name="delete_file_msg">Confirm delete these %1$s items ?</string>
    <string name="delete_ing">Deleting %1$s items</string>
    <string name="delete_smb_msg">Confirm delete %1$s ?</string>
    <string name="des_file">The file in current folder:</string>
    <string name="des_folder">The folder in current folder:</string>
    <string name="device_list">Device List</string>
    <string name="directory">Folder</string>
    <string name="display">Display</string>
    <string name="error">Error</string>
    <string name="example">Example:</string>
    <string name="examples">1 smb://server/share/r\n2 smb://ip/share/r\n3 smb://server/r\n4 //server/sharer\n5 ip/sharer\n6 serverr\n7 server/share/dir/..</string>
    <string name="exist_favorite">The same favorite already exists!</string>
    <string name="exist_file_reminds">A file with the same name already exists</string>
    <string name="exist_smb_reminds">The server already exists</string>
    <string name="exit">Exit</string>
    <string name="exit_reminds">Press again to exit</string>
    <string name="favor">Favor</string>
    <string name="favor_success">Favor Success!</string>
    <string name="favorite_device_title">Favorite</string>
    <string name="file">File</string>
    <string name="file_date">Modified Date : %1$s</string>
    <string name="file_not_exist">File Not Exist!</string>
    <string name="file_size">Size : %1$s</string>
    <string name="find_out">Found available devices!</string>
    <string name="flash">Storage</string>
    <string name="folder">Folder</string>
    <string name="has_copied_files">%1$d items were copied to the clipboard</string>
    <string name="has_cut_files">%1$s items were cut to the clipboard</string>
    <string name="hdd">HDD</string>
    <string name="hidden_msg">Show hidden items</string>
    <string name="hidden_tips">Do not show this again</string>
    <string name="hint_ip_address">IP Address</string>
    <string name="hint_server">IP/Host/Share path</string>
    <string name="host">Host : %1$s</string>
    <string name="identifier_type_flash">Storage</string>
    <string name="identifier_type_nfs">NFS</string>
    <string name="identifier_type_smb">SMB</string>
    <string name="identifier_type_usb">USB</string>
    <string name="input">Please input the file name</string>
    <string name="input_password">Please enter a password</string>
    <string name="input_server">Please input the Host name,IP or shared path</string>
    <string name="input_user">Please enter your user name</string>
    <string name="invalid_favorite">The favorite is no longer active!</string>
    <string name="invalid_shortcut">Invalid Shortcut!</string>
    <string name="invalid_url">Malformed URL Error</string>
    <string name="ip_address">IP address:</string>
    <string name="ip_invalid">Please enter a 0–255 integer</string>
    <string name="keep_operate">Perform the same operation when conflict</string>
    <string name="logoff">Logoff</string>
    <string name="logoff_smb_msg">Confirm logoff %1$s ?</string>
    <string name="look_over">Open</string>
    <string name="menu_choices">Choices</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_cut">Cut</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_favor">Favor</string>
    <string name="menu_favorite_remove">Remove</string>
    <string name="menu_file_delete">Delete</string>
    <string name="menu_file_new">New</string>
    <string name="menu_new">New</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_poster">Poster</string>
    <string name="menu_refreash">Refreash</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_select">Select</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_shortcut">Shortcut</string>
    <string name="menu_smb_new">Add</string>
    <string name="menu_viewport">Viewport</string>
    <string name="merge">Merge</string>
    <string name="merge_msg">If any file with the same name, will ask if you want to replace the file</string>
    <string name="mode_one">One by one</string>
    <string name="mode_page">Page by page</string>
    <string name="move_file">Move File</string>
    <string name="move_filed">Move failed</string>
    <string name="msg_delete_favorite">Confirm cancellation of favor selected items( %1$s ) ?</string>
    <string name="msg_invalid_ip">Please enter the correct IP address</string>
    <string name="msg_poster_wall_not_find">Please install the latest version of HomeTheater 2.0</string>
    <string name="msg_remote_device_disconnect">Seemingly remote device lost connection, please quit the application and try again later.</string>
    <string name="msg_searching">The last scan is not completed yet</string>
    <string name="mutil_all">Select all</string>
    <string name="mutil_cancel">Unselect</string>
    <string name="mutil_choose">Choices</string>
    <string name="name_cannot_be_empty">Name cannot be empty!</string>
    <string name="name_illegal">The file name cannot contains any of the following characters: \/:*?\"&lt;&gt;|</string>
    <string name="net_error">Network Error</string>
    <string name="net_error_msg">    Unable to browse the network file when lose your connection, please check the network connection, or browse the local file.</string>
    <string name="net_error_reminds">Network Error,Please check your network connection</string>
    <string name="nfs">NFS</string>
    <string name="nfs_error">The current network is unavailable, NFS can not start</string>
    <string name="nfs_host_error">No shared folder</string>
    <string name="nfs_open_fail">Failed to connect to NFS</string>
    <string name="nfs_search_0">Port Scan</string>
    <string name="nfs_search_1">Depth Scan</string>
    <string name="nfs_search_2">Manually Add</string>
    <string name="normal_search">Default Scan</string>
    <string name="not_find_new_smb">No new device found,you may change a way to scan or add device in manual mode</string>
    <string name="not_find_nfs">Device not be found</string>
    <string name="not_find_smb">Device not be found</string>
    <string name="ok">OK</string>
    <string name="open_bdmv_reminds">    This is a Blu-ray folder. Please make a selection</string>
    <string name="open_by_txt">Open</string>
    <string name="open_cue_reminds">    This is a CD image auxiliary file,Please choose operation to be performed.</string>
    <string name="open_host_error">Unable to access the host</string>
    <string name="open_menu_reminds">Press menu key to open Menu</string>
    <string name="open_usb">Open</string>
    <string name="open_with">Select Operation</string>
    <string name="operate_complete">Operation completed</string>
    <string name="operate_filed">Operation failed</string>
    <string name="operate_mode">Page mode</string>
    <string name="operate_rename">Rename</string>
    <string name="password">Password</string>
    <string name="play">Play</string>
    <string name="play_relevant_document">Play</string>
    <string name="port">Port:</string>
    <string name="port_invalid">Please enter a 0–65535 integer</string>
    <string name="quick_search">Quick Scan</string>
    <string name="rename_hint">New name</string>
    <string name="replace">Replace</string>
    <string name="replace_msg">Replace the file in the target folder by the file being copied</string>
    <string name="replace_msg_cut">Replace the file in the target folder by the file being moved</string>
    <string name="save">Copy,and reserve these two items</string>
    <string name="save_cut">Move,and reserve these two items</string>
    <string name="save_msg">The file being copied will be renamed to \"%1$s\"</string>
    <string name="save_msg_cut">Moving the file will be renamed to \"%1$s\"</string>
    <string name="scroll_msg">Turn the page when scroll</string>
    <string name="sdcard">SD Card</string>
    <string name="select_same_file_operate">This folder already contains a file with the same name, select the operation to be performed</string>
    <string name="select_same_folder_operate">This folder already contains a folder with the same name, select the operation to be performed</string>
    <string name="send_shortcut">Send to desktop shortcuts</string>
    <string name="server">Server</string>
    <string name="setting">Settings</string>
    <string name="size">Size:</string>
    <string name="skip">Skip</string>
    <string name="skip_msg">No change will be done to items, skip copying this file</string>
    <string name="skip_msg_cut">No change will be done to items, skip move this file</string>
    <string name="smb">SMB</string>
    <string name="smb_mode_address">Address</string>
    <string name="smb_mode_user">User</string>
    <string name="smb_open_fail">Failed to connect to SMB</string>
    <string name="smb_pass">Password</string>
    <string name="smb_user">Username</string>
    <string name="smb_user_input_memory">Remember login</string>
    <string name="sort">Sort by</string>
    <string name="sort_0">Name</string>
    <string name="sort_1">Size</string>
    <string name="sort_2">Date</string>
    <string name="sort_3">Type</string>
    <string name="space_not_enough">Insufficient disk space</string>
    <string name="src_file">The original file:</string>
    <string name="src_folder">The original folder:</string>
</resources>