<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
    <LinearLayout android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:background="@drawable/bg_dialog" android:paddingBottom="48dp" android:layout_width="UNKNOWN_DATA_0x1c801" android:layout_height="wrap_content">
        <com.zidoo.fileexplorer.view.ZidooTextView android:textSize="30sp" android:textColor="@color/operate_title" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3c01" android:text="@string/open_with" />
        <com.zidoo.fileexplorer.view.ZidooTextView android:textSize="26sp" android:textStyle="UNKNOWN_DATA_0x0" android:textColor="0x1060000" android:id="@+id/tv_msg" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:text="@string/open_bdmv_reminds" android:lineSpacingExtra="6dp" />
        <com.zidoo.fileexplorer.view.ZidooButton android:id="@+id/bt_look" android:layout_width="match_parent" android:layout_marginLeft="10dp" android:layout_marginTop="36dp" android:layout_marginRight="10dp" android:text="@string/look_over" style="@style/OperateItem" />
        <com.zidoo.fileexplorer.view.ZidooButton android:id="@+id/bt_play" android:layout_width="match_parent" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="@string/play" style="@style/OperateItem" />
        <com.zidoo.fileexplorer.view.ZidooButton android:id="@+id/bt_bluray_navigation" android:visibility="gone" android:layout_width="match_parent" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="@string/blu_ray_navigation" style="@style/OperateItem" />
    </LinearLayout>
</LinearLayout>
