<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
    <LinearLayout android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:background="@drawable/bg_dialog" android:layout_width="UNKNOWN_DATA_0x20801" android:layout_height="wrap_content">
        <com.zidoo.fileexplorer.view.ZidooTextView android:textSize="30sp" android:textColor="@color/operate_title" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3c01" android:text="@string/net_error" />
        <com.zidoo.fileexplorer.view.ZidooTextView android:textSize="22sp" android:textStyle="UNKNOWN_DATA_0x0" android:textColor="0x106000b" android:id="@+id/tv_msg" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:text="@string/net_error_msg" android:textScaleX="@dimen/ts_delete_msg" />
        <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x6401" android:layout_marginTop="35dp">
            <com.zidoo.fileexplorer.view.ZidooButton android:id="@+id/bt_exit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/exit" style="@style/Button" />
            <com.zidoo.fileexplorer.view.ZidooButton android:id="@+id/bt_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:text="@string/ok" style="@style/Button" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
