<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent"
    <LinearLayout android:orientation="vertical" android:background="@drawable/bg_dialog" android:layout_width="UNKNOWN_DATA_0x21701" android:layout_height="wrap_content">
        <com.zidoo.fileexplorer.view.ZidooTextView android:textSize="25sp" android:textColor="0x1060000" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/lock_input_hit" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3c01" />
        <EditText android:textStyle="UNKNOWN_DATA_0x0" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/et_user" android:layout_width="UNKNOWN_DATA_0x12c01" android:layout_height="UNKNOWN_DATA_0x3c01" android:layout_marginTop="30dp" android:hint="@string/smb_user" style="@style/EditText" />
        <EditText android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/et_password" android:layout_width="UNKNOWN_DATA_0x12c01" android:layout_height="UNKNOWN_DATA_0x3c01" android:layout_marginTop="12dp" android:hint="@string/smb_pass" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" style="@style/EditText" />
        <CheckBox android:textSize="20sp" android:textColor="@drawable/selector_text_file_exist_dialog_checkbox" android:id="@+id/lock_ac_isport" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:checked="false" android:button="@drawable/st_browse_checkbox" android:text="@string/anonymous" android:paddingStart="10dp" android:layout_marginStart="80dp" />
        <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x6401">
            <com.zidoo.fileexplorer.view.ZidooButton android:id="@+id/lock_input_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ok" style="@style/Button" />
            <com.zidoo.fileexplorer.view.ZidooButton android:id="@+id/lock_input_set" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:text="@string/cancel" style="@style/Button" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
